**2022-05: version 45.0**

* The ``org_name`` config can now specify any of the organization's
  ``cloud_account``, ``uuid`` or ``name``
* Removed the ``User-Agent`` header for all requests
* Added a custom header for all requests that will include the current version of the library: ``Resilient-Module-Version: 45.0.0``

**2022-04: version 44.1**

* Better logging of an ``Unauthorized`` request with API Keys and exits with a code of ``21``
* Added optional ``get_response_object`` argument to :class:`resilient.SimpleClient.get() <resilient.co3.SimpleClient.get>`
  that if ``True``, returns entire response object

**2022-02: version 44.0**

* Ensure ``tests/`` is not included in packaged code
* Added ``is_uri_absolute`` argument to :class:`resilient.SimpleClient.get() <resilient.co3.SimpleClient.get>`
  that if ``True``, does not insert ``/org/{org_id}`` into the uri
* Officially support ``Python 3.9``

**2022-01: version 43.1**

* Ability to globally check if ``unrecognized arguments`` are allowed

**2021-11: version 43.0**

* Formatted Sphinx documentation and hosted it at https://ibm.biz/soar-python-docs

**2021-11: version 42.3**

* No major changes. Just bumping build number to coincide with other builds

**2021-10: version 42.2**

* Bug fix for ``pip >= 21.3``

**2021-08: version 42.1**

* Bug fix removing pinned ``urllib3`` dependency

**2021-08: version 42.0**

* Added support for ``HTTP_PROXY``, ``HTTPS_PROXY`` and ``NO_PROXY`` environmental variables. See the App Host Deployment Guide for details.
* Add new ``User-Agent: soar-app-1.0`` header for API calls to SOAR platform.
* Bug fixes.

**2021-06: version 41.1**

* No major changes. Just bumping build number to coincide with other builds

**2021-05: version 41.0**

* No major changes. Just bumping build number to coincide with other builds

**2021-03: version 40.2**

* Bug fix for to use ``setuptools_scm < 6.0.0`` for Python 2.7 environments

**2021-03: version 40.1**
